[PATCH] icon view floating bar interferes with double click when at bottom of view
When you have the mouse pointer at the bottom of the icon view in the area of the floating bar (which is hidden as you have the pointer there) if the file is not selected and you double-click it, it fails to launch because the floating bar appears for an instant and eats the second click of the double-click.
What happens is the first click selects the file and queues a floating bar show info, the floating bar appears for an instant eating your second click, it hides again as you have the pointer in the floating bar area.
Following screencasts show the problem, in all of them I'm trying to launch a pdf by double click, but to no avail.
I will attach a patch that fixes the issue.