files-view: fix NautilusFloatingBar interfering with double click

When you have the mouse pointer at the bottom of the icon view in
the area of the floating bar (which is hidden as you have the
pointer there) if the file is not selected and you double-click it,
it fails to launch because the floating bar appears for an instant
and eats the second click of the double-click.

What happens is the first click selects the file and queues a
floating bar show info, the floating bar appears for an instant
eating your second click, it hides again as you have the pointer
in the floating bar area.

Fixed by making the floating bar pass-through the click events to
its underneath window just for the timeframe a double click could
happen. We can't leave pass-through always on because the parent
overlay "enter-notify-event" event would not fire in that case.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/28